--- a/R03/pom.xml
+++ b/R03/pom.xml
@@ -115,9 +115,8 @@
 							<!-- INSIRA OS NOMES COMPLETOS DAS CLASSES A SEREM TESTADAS AQUI (Full 
 								qualified name = nome com o pacote) -->
 							<qualifiedNames>
-								<!-- name>sorting.simpleSorting.BubbleSort</name -->
-								<!-- name>sorting.simpleSorting.SelectionSort</name -->
-								<!-- name>sorting.simpleSorting.InsertionSort</name -->
+								<name>sorting.linearSorting.ExtendedCountingSort</name>
+								<name>sorting.linearSorting.CountingSort</name>
 							</qualifiedNames>
 						</configuration>
 					</execution>
