--- a/Roteiro 12/pom.xml
+++ b/Roteiro 12/pom.xml
@@ -11,7 +11,7 @@
 <pluginRepositories>
 		<pluginRepository>
 			<id>ufcg-leda</id>
-			<url>http://150.165.85.29:8081/nexus/content/repositories/ufcg-leda</url>
+			<url>http://150.165.15.10:8081/nexus/content/repositories/ufcg-leda</url>
 			<layout>default</layout>
 			<snapshots>
 				<enabled>true</enabled>
@@ -83,12 +83,12 @@
 						</goals>
 						<configuration>
 							<!-- insira sua matricula -->
-							<matricula>INSIRA SEU NUMERO DE MATRICULA</matricula>
+							<matricula>118210111</matricula>
 							<!-- insira o ID correto da atividade e a turma -->
-							<roteiro>R0X-0X</roteiro>
+							<roteiro>R12-01</roteiro>
 							<!-- NÃO MODIFIQUE AS TAGS ABAIXO -->
-							<semestre>2018.1</semestre>
-							<url>http://150.165.85.29:81/submitAtividade</url>
+							<semestre>2019.2</semestre>
+							<url>http://150.165.15.10:81/submitAtividade</url>
 						</configuration>
 					</execution>
 				</executions>
